--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "mui-tiptap": "^1.8.6",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
